Cambio de resource boulder "_en" a un archivo por default se agregaron archivos nuevos "otrosboton.properties" y "otrosetiqueta.properties"  se remapeo todos los archivos .xhtml  de modulos Coordinador y Administrador.

--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -341,8 +341,8 @@
                             <h:graphicImage styleClass="uk-display-inline-block " library="img" name="/avatar/maestro.svg" width="60"/>
                         </div>
                         <div class="informacion">
-                            <h6>Informacion Profesor</h6>
-                            <p><h:outputText  value="Nombre: #{coordinadorModelo.nombre} #{coordinadorModelo.apellidoPaterno} #{coordinadorModelo.apellidoMaterno}"/></p>
+                            <h6>Coordinator</h6>
+                            <p><h:outputText  value="Name: #{coordinadorModelo.nombre} #{coordinadorModelo.apellidoPaterno} #{coordinadorModelo.apellidoMaterno}"/></p>
                             <p><h:outputText  value="Nickname: #{coordinadorModelo.apodo}"/></p>
                         </div>
                         <div class="datos">
