--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -13,7 +13,7 @@
         </f:metadata>
 
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
-            <li class="uk-nav-header">#{coordinador['menu.menu']}</li>
+            <li class="uk-nav-header">#{otrosetiqueta['menu']}</li>
             <li class="uk-parent uk-open">
                 <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
                 <ul class="uk-nav-sub">
@@ -248,7 +248,7 @@
                                         <h:graphicImage library="img" name="/icono/information.svg" styleClass="ayuda-imagen" pt:uk-svg="" />
                                     </span>
                                     <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; pos: top-left" style="min-width: 120px; white-space: nowrap; color: black; padding: 10px; border: 3px solid #0e6dcd">
-                                        <p style="margin: 3px">Total de videos: Numero total de videos asignados al alumno en su nivel actual. </p>
+                                        <p style="margin: 3px">#{coordinador['teacher.detail.table.grup.footer.message']}</p>
                                     </h:panelGroup>
                                 </h:panelGroup>
                             </f:facet>
@@ -335,7 +335,7 @@
                                       promedioAlumnoModelo.promedioOraciones eq null and
                                       promedioAlumnoModelo.promedioCompletar eq null and
                                       promedioAlumnoModelo.promedioRelacionarImagen eq null and
-                                      promedioAlumnoModelo.promedioPromedioMapamental eq null}" value="No tiene tareas"/>
+                                      promedioAlumnoModelo.promedioPromedioMapamental eq null}" value="#{coordinador['teacher.detail.table.student.average.video']}"/>
                                       <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarOracion ne null or
                                       promedioAlumnoModelo.promedioGramatica ne null or
                                       promedioAlumnoModelo.promedioTranscipcion ne null or
