--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -88,7 +88,7 @@
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">correo</f:facet>
-                                    ${profesorModelo.correoEletronico},${administracionProfesorControlador.escuelaBaseModelo.galaxia}
+                                    ${profesorModelo.correoEletronico}
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">contraseña</f:facet>
@@ -330,6 +330,7 @@
                                 <h6>Teacher</h6>
                                 <p><h:outputText  value="Name: #{profesorModelo.nombre} #{profesorModelo.apellidoPaterno} #{profesorModelo.apellidoMaterno}"/></p>
                                 <p><h:outputText  value="Nickname: #{profesorModelo.apodo}"/></p>
+                                <p><h:outputText value="Galaxy: #{administracionProfesorControlador.escuelaBaseModelo.galaxia}"/></p>
                             </div>
                             <div class="datos">
                                 <h6>Password</h6>
