--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -23,7 +23,7 @@
     </f:metadata>
     <ui:define name="contenido">
         <div uk-grid="">
-            <div class="uk-width-1-2">
+            <div class="uk-width-1-3">
                 <h:outputText value="Este profesor aun no tiene relacionado un ciclo escolar" rendered="#{empty grupoControlador.cicloEscolarModeloMapa}"/>
                 <h:form id="formulario-" rendered="#{not empty grupoControlador.cicloEscolarModeloMapa}">
                     Ciclo escolares:
@@ -37,7 +37,7 @@
                     </h:selectOneMenu>
                 </h:form>
             </div>
-            <div class="uk-width-1-2">
+            <div class="uk-width-2-3">
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
                     <h:form id="formulario-grupo">
                         <div class="uk-card-header">
@@ -105,6 +105,14 @@
                                                         <span class="uk-text-middle"><h:outputText value="#{otrosboton['update']}" styleClass="primera-mayuscula uk-display-inline-block"/></span>
                                                         <f:setPropertyActionListener value="#{grupoModelo}" target="#{grupoControlador.grupoModelo}"/>
                                                         <f:ajax render="formulario-modal-grupo"/>
+                                                    </h:commandLink>
+                                                </li>
+                                                <li>
+                                                    <h:commandLink pt:uk-toggle="target: #modal-reasigna-grupo">
+                                                        <h:outputText pt:uk-icon="icon: forward" styleClass="uk-margin-small-right uk-icon" />
+                                                        <span class="uk-text-middle"><h:outputText value="reasignar" styleClass="primera-mayuscula uk-display-inline-block"/></span>
+                                                        <f:setPropertyActionListener value="#{grupoModelo}" target="#{grupoControlador.grupoModelo}"/>
+                                                        <f:ajax render="formulario-reasigna-grupo" listener="#{grupoControlador.buscaProfesor()}"/>
                                                     </h:commandLink>
                                                 </li>
                                                 <li class="uk-nav-divider"/>
@@ -223,6 +231,34 @@
                     </h:form>
                 </div>
             </div>
+        </h:panelGroup>
+<!--        Modal reasignar grupo       -->
+        <h:panelGroup layout="block" id="modal-reasigna-grupo" pt:uk-modal="">
+            <h:form id="formulario-reasigna-grupo">
+                <div class="uk-modal-dialog uk-margin-auto-vertical">
+                    <div class="uk-modal-header">
+                        <p class="uk-h4 uk-text-center uk-text-bold primera-mayuscula letra-titulo">reasignar grupo</p>
+                    </div>
+                    <div class="uk-modal-body">
+                        <h:outputFormat value="Por favor seleccione un profesor a reasignar el grupo {0} {1}">
+                            <f:param value="#{grupoControlador.grupoModelo.grado}"/>
+                            <f:param value="#{grupoControlador.grupoModelo.grupo}"/>
+                        </h:outputFormat>
+                        <h:selectOneRadio value="#{grupoControlador.profesorIdReasignar}">
+                            <f:selectItems value="#{grupoControlador.profesorModeloLista}"
+                                           var="profesorModelo"
+                                           itemLabel="${profesorModelo.nombre} ${profesorModelo.apellidoPaterno} ${profesorModelo.apellidoMaterno}"
+                                           itemValue="${profesorModelo.id}"/>
+                        </h:selectOneRadio>
+                    </div>
+                    <div class="uk-modal-footer uk-flex uk-flex-right">
+                        <button type="reset" class="uk-button uk-button-default uk-margin-small-right uk-modal-close">#{otrosboton['cancel']}</button>
+                        <h:commandButton value="reasignar" styleClass="uk-button uk-button-primary">
+                            <f:ajax execute="@form" listener="#{grupoControlador.cambiaGrupo()}" render="@from formulario-grupo"/>
+                        </h:commandButton>
+                    </div>
+                </div>
+            </h:form>
         </h:panelGroup>
         <div class="uk-flex uk-flex-right">
             <h:button outcome="ir-atras" styleClass="uk-button uk-button-primary uk-margin-top" value="atras"/>
