--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -307,8 +307,7 @@
                         <h:commandButton styleClass="uk-button uk-button-danger uk-modal-close" value="#{otrosboton['remove']}" disabled="#{0 ne administracionProfesorControlador.totalGrupos}">
                             <f:ajax listener="#{administracionProfesorControlador.elimina}"
                                     render="formulario-tabla modal-password"
-                                    onevent="function funcion(data) {cerrarModal(data,'modal-eliminar',1);}"
-                                    />
+                                    onevent="function funcion(data) {cerrarModal(data,'modal-eliminar',1);}"/>
                         </h:commandButton>
                     </div>
                 </h:form>
