--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -215,8 +215,8 @@
                         <h:inputHidden id="input-tarea" value="#{tareaAlumnoControlador.idTarea}"/>
                     </div>
                     <div class="uk-modal-footer uk-text-right">
-                        <button class="boton-escuadron-base uk-margin-small-right uk-modal-close" type="button" style="background-color: #AAB7B8">${boton['cancel']}</button>
-                        <h:commandButton styleClass="boton-escuadron-base  uk-modal-close" value="${boton['remove']}" style="background-color: var(--color-peligro)">
+                        <button class="boton-escuadron-base uk-margin-small-right uk-modal-close" type="button" style="background-color: #AAB7B8">${otrosboton['cancel']}</button>
+                        <h:commandButton styleClass="boton-escuadron-base  uk-modal-close" value="${otrosboton['remove']}" style="background-color: var(--color-peligro)">
                             <f:ajax execute="input-tarea" listener="#{tareaAlumnoControlador.borrar}" onevent="function f(data) {
                                renderizarBorrado(data);
                             }" render="formulario-tabla-actividades"/>
